#参考 https://www.jianshu.com/p/04343d6be97e
cmake_minimum_required(VERSION 3.17)
project(algorithm)

set(CMAKE_CXX_STANDARD 14)

include_directories(${CMAKE_SOURCE_DIR}/include)
add_subdirectory(leetcode/editor/cn/include)

add_executable(algorithm main.cpp)


add_executable(206-reverse-linked-list leetcode/editor/cn/206-reverse-linked-list.cpp)
add_executable(25-reverse-nodes-in-k-group leetcode/editor/cn/25-reverse-nodes-in-k-group.cpp)
add_executable(26-remove-duplicates-from-sorted-array leetcode/editor/cn/26-remove-duplicates-from-sorted-array.cpp)
add_executable(20-valid-parentheses leetcode/editor/cn/20-valid-parentheses.cpp)
add_executable(155-min-stack leetcode/editor/cn/155-min-stack.cpp)
add_executable(84-largest-rectangle-in-histogram leetcode/editor/cn/84-largest-rectangle-in-histogram.cpp)
add_executable(239-sliding-window-maximum leetcode/editor/cn/239-sliding-window-maximum.cpp)
add_executable(42-trapping-rain-water leetcode/editor/cn/42-trapping-rain-water.cpp)
add_executable(242-valid-anagram leetcode/editor/cn/242-valid-anagram.cpp)
add_executable(49-group-anagrams leetcode/editor/cn/49-group-anagrams.cpp)
add_executable(94-binary-tree-inorder-traversal leetcode/editor/cn/94-binary-tree-inorder-traversal.cpp)
add_executable(297-serialize-and-deserialize-binary-tree leetcode/editor/cn/297-serialize-and-deserialize-binary-tree.cpp)
add_executable(77-combinations leetcode/editor/cn/77-combinations.cpp)
add_executable(78-subsets leetcode/editor/cn/78-subsets.cpp)
add_executable(40-combination-sum-ii leetcode/editor/cn/40-combination-sum-ii.cpp)
add_executable(17-letter-combinations-of-a-phone-number leetcode/editor/cn/17-letter-combinations-of-a-phone-number.cpp)
add_executable(15-3sum leetcode/editor/cn/15-3sum.cpp)
add_executable(127-word-ladder leetcode/editor/cn/127-word-ladder.cpp)
add_executable(126-word-ladder-ii leetcode/editor/cn/126-word-ladder-ii.cpp)
add_executable(433-minimum-genetic-mutation leetcode/editor/cn/433-minimum-genetic-mutation.cpp)
add_executable(55-jump-game leetcode/editor/cn/55-jump-game.cpp)
add_executable(874-walking-robot-simulation leetcode/editor/cn/874-walking-robot-simulation.cpp)
add_executable(69-sqrtx leetcode/editor/cn/69-sqrtx.cpp)
add_executable(367-valid-perfect-square leetcode/editor/cn/367-valid-perfect-square.cpp)
add_executable(153-find-minimum-in-rotated-sorted-array leetcode/editor/cn/153-find-minimum-in-rotated-sorted-array.cpp)
add_executable(33-search-in-rotated-sorted-array leetcode/editor/cn/33-search-in-rotated-sorted-array.cpp)
add_executable(154-find-minimum-in-rotated-sorted-array-ii leetcode/editor/cn/154-find-minimum-in-rotated-sorted-array-ii.cpp)
add_executable(81-search-in-rotated-sorted-array-ii leetcode/editor/cn/81-search-in-rotated-sorted-array-ii.cpp)
add_executable(74-search-a-2d-matrix leetcode/editor/cn/74-search-a-2d-matrix.cpp)
add_executable(63-unique-paths-ii leetcode/editor/cn/63-unique-paths-ii.cpp)
add_executable(152-maximum-product-subarray leetcode/editor/cn/152-maximum-product-subarray.cpp)
add_executable(518-coin-change-2 leetcode/editor/cn/518-coin-change-2.cpp)
add_executable(213-house-robber-ii leetcode/editor/cn/213-house-robber-ii.cpp)
add_executable(309-best-time-to-buy-and-sell-stock-with-cooldown leetcode/editor/cn/309-best-time-to-buy-and-sell-stock-with-cooldown.cpp)
add_executable(188-best-time-to-buy-and-sell-stock-iv leetcode/editor/cn/188-best-time-to-buy-and-sell-stock-iv.cpp)
add_executable(279-perfect-squares leetcode/editor/cn/279-perfect-squares.cpp)
add_executable(212-word-search-ii leetcode/editor/cn/212-word-search-ii.cpp)
add_executable(130-surrounded-regions leetcode/editor/cn/130-surrounded-regions.cpp)
add_executable(37-sudoku-solver leetcode/editor/cn/37-sudoku-solver.cpp)
add_executable(1091-shortest-path-in-binary-matrix leetcode/editor/cn/1091-shortest-path-in-binary-matrix.cpp)
add_executable(773-sliding-puzzle leetcode/editor/cn/773-sliding-puzzle.cpp)
add_executable(51-n-queens leetcode/editor/cn/51-n-queens.cpp)
add_executable(146-lru-cache leetcode/editor/cn/146-lru-cache.cpp)
add_executable(493-reverse-pairs leetcode/editor/cn/493-reverse-pairs.cpp)